--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,114 @@
 
+* {box-sizing: border-box;}
+  h1{text-align: center;}
+  div 
+  {
+  	border: 2px green;
+  	padding: 0px 5px 0px;
+
+
+  }
+     h2{text-align: right;
+     	position:relative; 
+        padding-left: 5px;
+        padding-right: 5px;
+        margin-bottom: 5px;  
+}
+        
+        div{padding-left: 10px;
+        	position: relative;
+        	float: right;
+             
+        	padding-right: 10px;
+         }
+  
+
+
+  #red {background-color: red;
+  border: 2px solid black;}
+  
+ #pink{background-color: pink;
+ border: 2px solid black;}
+  
+  #yellow{background-color: yellow;
+  border: 2px solid black;}
+
+  p {background-color: grey;
+  	margin-top: 5px;
+  	border: 2px solid green;
+  	padding-top: 28px;
+
+    }
+
+.row {width:100%;}
+
+	@media(min-width: 992px)
+  	{
+  		.cl-lg-1, .cl-lg-2 , .cl-lg-3
+  		{
+  			float: left;
+  			border: 1px green;
+
+  		}
+  	
+
+     .cl-lg-1
+     {
+     	width:33.33%;
+     }
+    
+     .cl-lg-2{
+     	width: 67%;
+     }
+     .cl-lg-3{
+     	width:100%;
+     }
+    }
+
+
+
+  	@media(min-width: 768px) and   (max-width: 991px)
+
+  	{ 
+  		div#chicken{width: 100%;}
+
+
+  		.cl-md-1, .cl-md-2 , .cl-md-3
+  		{
+  			float: left;
+            border: 1px green;
+
+  		}
+  	
+
+     
+     .cl-md-2{
+     	width: 50%;
+
+
+     }
+
+}
+
+      
+  	@media(max-width: 767px)
+  	{
+  		.cl-sm-1
+  		{
+  			float: left;
+  			border:1px green;
+
+  		}
+  	
+
+     .cl-sm-1
+     {
+     	width:100%;
+     }
+}
+@media (max-width: 991px) and (min-width: 768px){
+
+div#Chicken {
+    width: 100%;
+}
+}
